Fix: Corrected gap for "No data available" message

--- a/src/App.css
+++ b/src/App.css
@@ -131,3 +131,7 @@ p {
   background-color: #8EA8C3;
   transition-duration: 500ms;
 }
+
+.text-no-data{
+  margin: 0 0 0 0.5rem;
+}
